@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-06T08:07:33Z",
+  "timestamp" : "2022-05-07T00:26:48Z",
   "count_outdated" : 302,
   "uniques_outdated" : 61,
-  "count" : 345,
+  "count" : 350,
   "uniques" : 68,
   "views" : [
     {
@@ -42,8 +42,8 @@
     },
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 0, 2 ],
+      "count": 7,
+      "count_minmax": [ 0, 7 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
