@@ -1,5 +1,5 @@
 {
-  "count": 43,
+  "count": 48,
   "uniques": 4,
   "views": [
     {
@@ -29,7 +29,7 @@
     },
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 2,
+      "count": 7,
       "uniques": 1
     }
   ]
