@@ -1,3 +1,9 @@
+2022-05-07T00:26:48Z:
+* notice: last 14d: all unq: 48 4
+* notice: prev accum: outdated-all outdated-unq / all unq: 302 61 / 345 68
+* notice: next accum: outdated-all outdated-unq / all unq: 302 61 / 350 68
+* notice: prev json diff // prev day diff: unq all: +0 +5 / -0 -0 // +0 +5 / -0 -0
+
 2022-05-06T08:07:33Z:
 * notice: last 14d: all unq: 43 4
 * notice: prev accum: outdated-all outdated-unq / all unq: 302 61 / 343 67
